--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,58 +6,70 @@
     <title>Nome do Salão | Dashboard</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <link rel="stylesheet" href="./assets/components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/components/Ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="./assets/components/datatables.net-bs/css/dataTables.bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/components/fullcalendar/dist/fullcalendar.min.css"/>
+    <link rel="stylesheet" href="./assets/components/fullcalendar/dist/fullcalendar.print.css" media="print"/>
+    <link rel="stylesheet" href="./assets/components/fullcalendar-scheduler/dist/scheduler.min.css" media="print"/>
+
     <!-- Theme style -->
-    <link rel="stylesheet" href="/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="./dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="./dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="./css/agenda.css">
 
-    <link rel="stylesheet" href="./assets/components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/components/fullcalendar/dist/fullcalendar.css"/>
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body class="hold-transition skin-blue layout-top-nav">
     <div class="wrapper">
         <div ng-include="'views/main-header.html'"></div>
         <div class="content-wrapper">
-            <div ng-controller="ServicoController">
-                <!--<div ng-include="'views/cliente-page.html'"></div>-->
-                <div ui-calendar ng-model="eventSources"></div>
+            <div>
+                <ui-view></ui-view>
+                <!--<div ng-include="'views/login.html'"></div>-->
+                <!--<div ng-include="'views/agenda-page.html'"></div>-->
+                <!--<div ui-calendar ng-model="eventSources"></div>-->
             </div>
         </div><!-- /.content-wrapper -->
         <div ng-include="'views/main-footer.html'"></div>
     </div>
-    <script>
-        var AdminLTEOptions = {
-        };
-    </script>
     <script src="./assets/components/jquery/dist/jquery.min.js"></script>
-    <script src="./assets/components/moment/min/moment.min.js"></script>
     <script src="./assets/components/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
         $.widget.bridge('uibutton', $.ui.button);
     </script>
-    <!-- Bootstrap 3.3.5 -->
     <script src="./assets/components/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <script src="./assets/components/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="./assets/components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <script src="./assets/components/moment/min/moment.min.js"></script>
 
-
+    <script>
+        $(function () {
+            var AdminLTEOptions = {
+            };
+        });
+    </script>
+    <script src="./dist/js/app.min.js"></script>
     <script src="./assets/components/angular/angular.js"></script>
     <script src="./assets/components/fullcalendar/dist/fullcalendar.min.js"></script>
-    <script src="./assets/components/fullcalendar/dist/gcal.js"></script>
+    <script src="./assets/components/fullcalendar/dist/lang/pt-br.js"></script>
+    <script src="./assets/components/fullcalendar-scheduler/dist/scheduler.min.js"></script>
     <script src="./assets/components/angular-resource/angular-resource.js"></script>
     <script src="./assets/components/angular-ui-calendar/src/calendar.js"></script>
-    <script src="./dist/js/app.min.js"></script>
+    <script src="./assets/components/angular-messages/angular-messages.min.js"></script>
+    <script src="./assets/components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="./assets/components/ngstorage/ngStorage.min.js"></script>
+
+
     <script src="./js/app.js"></script>
-    <script src="./js/services.js"></script>
-    <script src="./js/controller.js"></script>
+    <script src="./js/services/ServicoFactory.js"></script>
+    <script src="./js/services/AuthenticationService.js"></script>
+    <script src="./js/controllers/IndexController.js"></script>
+    <script src="./js/controllers/AgendaController.js"></script>
 
 </body>
 </html>
