--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,6 +65,7 @@
     <script src="./assets/components/angular-messages/angular-messages.min.js"></script>
     <script src="./assets/components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="./assets/components/ngstorage/ngStorage.min.js"></script>
+    <script src="./assets/components/angular-jwt/dist/angular-jwt.min.js"></script>
 
     <!-- APP -->
     <script src="./js/app.js"></script>
@@ -83,5 +84,7 @@
 
     <!-- CONFIGS -->
     <script src="./js/configs/routeConfig.js"></script>
+    <script src="./js/configs/jwtOptionsProviderConfig.js"></script>
+    <script src="./js/configs/interceptorConfig.js"></script>
 </body>
 </html>
