--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,6 +66,9 @@
     <script src="./assets/components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="./assets/components/ngstorage/ngStorage.min.js"></script>
     <script src="./assets/components/angular-jwt/dist/angular-jwt.min.js"></script>
+    <script src="./assets/components/angular-i18n/angular-locale_pt-br.js"></script>
+    <script src="./assets/components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="./assets/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
     <!-- APP -->
     <script src="./js/app.js"></script>
@@ -73,6 +76,7 @@
     <script src="js/services/servicoService.js"></script>
     <script src="js/services/authenticationService.js"></script>
     <script src="js/services/jwtHelperService.js"></script>
+    <script src="js/services/authManagerService.js"></script>
     <!-- CONTROLLERS -->
     <script src="js/controllers/mainController.js"></script>
     <script src="js/controllers/agendaController.js"></script>
@@ -90,6 +94,9 @@
     <script src="./js/configs/valueConfig.js"></script>
     <script src="./js/configs/routeConfig.js"></script>
     <script src="./js/configs/interceptorConfig.js"></script>
+
+    <!-- DIRECTIVES -->
+    <script src="./js/directives/timeInputDirective.js"></script>
 
 </body>
 </html>
