--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,6 +69,8 @@
     <script src="./assets/components/angular-i18n/angular-locale_pt-br.js"></script>
     <script src="./assets/components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="./assets/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="./assets/components/ng-currency/dist/ng-currency.js"></script>
+    <script src="./assets/components/ngMask/dist/ngMask.min.js"></script>
 
     <!-- APP -->
     <script src="./js/app.js"></script>
@@ -81,6 +83,7 @@
     <script src="js/controllers/mainController.js"></script>
     <script src="js/controllers/agendaController.js"></script>
     <script src="js/controllers/salaoController.js"></script>
+    <script src="js/controllers/servicoController.js"></script>
     <script src="js/controllers/profissionalController.js"></script>
     <script src="js/controllers/clienteController.js"></script>
     <script src="js/controllers/loginController.js"></script>
