Adicionado lista de funcionario

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,6 +76,7 @@
     <script src="./js/app.js"></script>
     <!-- SERVICES -->
     <script src="js/services/servicoService.js"></script>
+    <script src="js/services/profissionalService.js"></script>
     <script src="js/services/authenticationService.js"></script>
     <script src="js/services/jwtHelperService.js"></script>
     <script src="js/services/authManagerService.js"></script>
