--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/components/fullcalendar/dist/fullcalendar.min.css"/>
     <link rel="stylesheet" href="./assets/components/fullcalendar/dist/fullcalendar.print.css" media="print"/>
     <link rel="stylesheet" href="./assets/components/fullcalendar-scheduler/dist/scheduler.min.css" media="print"/>
+    <link rel="stylesheet" href="./assets/components/angular-ui-notification/dist/angular-ui-notification.min.css"/>
 
     <!-- Theme style -->
     <link rel="stylesheet" href="./dist/css/AdminLTE.min.css">
@@ -71,6 +72,7 @@
     <script src="./assets/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="./assets/components/ng-currency/dist/ng-currency.js"></script>
     <script src="./assets/components/ngMask/dist/ngMask.min.js"></script>
+    <script src="./assets/components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
 
     <!-- APP -->
     <script src="./js/app.js"></script>
@@ -98,6 +100,7 @@
     <script src="./js/configs/valueConfig.js"></script>
     <script src="./js/configs/routeConfig.js"></script>
     <script src="./js/configs/interceptorConfig.js"></script>
+    <script src="./js/configs/uiNotificationProviderConfig.js"></script>
 
     <!-- DIRECTIVES -->
     <script src="./js/directives/timeInputDirective.js"></script>
