Adicionado moment-format

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,7 @@
     <script src="./assets/components/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="./assets/components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
     <script src="./assets/components/moment/min/moment.min.js"></script>
+    <script src="./assets/components/moment-duration-format/lib/moment-duration-format.js"></script>
 
     <script>
         $(function () {
