--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -106,5 +106,8 @@
     <!-- DIRECTIVES -->
     <script src="./js/directives/timeInputDirective.js"></script>
 
+    <!-- FILTERS -->
+    <script src="./js/filters/minutesToHoursFilter.js"></script>
+
 </body>
 </html>
