Adicionado horario de funcionario

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,6 +108,7 @@
 
     <!-- FILTERS -->
     <script src="./js/filters/minutesToHoursFilter.js"></script>
+    <script src="./js/filters/diasSemanaToLabelFilter.js"></script>
 
 </body>
 </html>
