--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -83,6 +83,7 @@
     <script src="js/services/authenticationService.js"></script>
     <script src="js/services/jwtHelperService.js"></script>
     <script src="js/services/authManagerService.js"></script>
+    <script src="js/services/salaoService.js"></script>
     <!-- CONTROLLERS -->
     <script src="js/controllers/mainController.js"></script>
     <script src="js/controllers/agendaController.js"></script>
