--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -110,6 +110,7 @@
     <!-- FILTERS -->
     <script src="./js/filters/minutesToHoursFilter.js"></script>
     <script src="./js/filters/diasSemanaToLabelFilter.js"></script>
+    <script src="./js/filters/perfilToLabelFilter.js"></script>
 
 </body>
 </html>
