Registro do salao e varios bugs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,6 +84,7 @@
     <script src="js/services/jwtHelperService.js"></script>
     <script src="js/services/authManagerService.js"></script>
     <script src="js/services/salaoService.js"></script>
+    <script src="js/services/registroService.js"></script>
     <!-- CONTROLLERS -->
     <script src="js/controllers/mainController.js"></script>
     <script src="js/controllers/agendaController.js"></script>
