Adicionado add acesso para funcionario

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -95,6 +95,7 @@
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/registroController.js"></script>
     <script src="js/controllers/recuperarSenhaController.js"></script>
+    <script src="js/controllers/acessoController.js"></script>
 
     <!-- INTERSEPTORS -->
     <script src="js/interceptor/jwtInterceptor.js"></script>
