--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -85,6 +85,7 @@
     <script src="js/services/authManagerService.js"></script>
     <script src="js/services/salaoService.js"></script>
     <script src="js/services/registroService.js"></script>
+    <script src="js/services/clienteService.js"></script>
     <!-- CONTROLLERS -->
     <script src="js/controllers/mainController.js"></script>
     <script src="js/controllers/agendaController.js"></script>
@@ -96,6 +97,7 @@
     <script src="js/controllers/registroController.js"></script>
     <script src="js/controllers/recuperarSenhaController.js"></script>
     <script src="js/controllers/acessoController.js"></script>
+    <script src="js/controllers/menuController.js"></script>
 
     <!-- INTERSEPTORS -->
     <script src="js/interceptor/jwtInterceptor.js"></script>
