--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/components/fullcalendar/dist/fullcalendar.print.css" media="print"/>
     <link rel="stylesheet" href="./assets/components/fullcalendar-scheduler/dist/scheduler.min.css" media="print"/>
     <link rel="stylesheet" href="./assets/components/angular-ui-notification/dist/angular-ui-notification.min.css"/>
+    <link rel="stylesheet" href="./assets/components/angular-loading-bar/build/loading-bar.min.css"/>
 
     <!-- Theme style -->
     <link rel="stylesheet" href="./dist/css/AdminLTE.min.css">
@@ -74,6 +75,7 @@
     <script src="./assets/components/ng-currency/dist/ng-currency.js"></script>
     <script src="./assets/components/ngMask/dist/ngMask.min.js"></script>
     <script src="./assets/components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
+    <script src="./assets/components/angular-loading-bar/build/loading-bar.min.js"></script>
 
     <!-- APP -->
     <script src="./js/app.js"></script>
@@ -107,6 +109,7 @@
     <script src="./js/configs/routeConfig.js"></script>
     <script src="./js/configs/interceptorConfig.js"></script>
     <script src="./js/configs/uiNotificationProviderConfig.js"></script>
+    <script src="./js/configs/cfpLoadingBarProviderConfig.js"></script>
 
     <!-- DIRECTIVES -->
     <script src="./js/directives/timeInputDirective.js"></script>
