Novo cliente tela de agendamento

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,6 +100,7 @@
     <script src="js/controllers/recuperarSenhaController.js"></script>
     <script src="js/controllers/acessoController.js"></script>
     <script src="js/controllers/menuController.js"></script>
+    <script src="js/controllers/novoClienteController.js"></script>
 
     <!-- INTERSEPTORS -->
     <script src="js/interceptor/jwtInterceptor.js"></script>
