Inicio da agenda

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,6 +88,7 @@
     <script src="js/services/salaoService.js"></script>
     <script src="js/services/registroService.js"></script>
     <script src="js/services/clienteService.js"></script>
+    <script src="js/services/agendaService.js"></script>
     <!-- CONTROLLERS -->
     <script src="js/controllers/mainController.js"></script>
     <script src="js/controllers/agendaController.js"></script>
