Adicionado select clientes e servicos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/components/fullcalendar-scheduler/dist/scheduler.min.css" media="print"/>
     <link rel="stylesheet" href="./assets/components/angular-ui-notification/dist/angular-ui-notification.min.css"/>
     <link rel="stylesheet" href="./assets/components/angular-loading-bar/build/loading-bar.min.css"/>
+    <link rel="stylesheet" href="./assets/components/angular-ui-select/dist/select.min.css"/>
 
     <!-- Theme style -->
     <link rel="stylesheet" href="./dist/css/AdminLTE.min.css">
@@ -76,6 +77,8 @@
     <script src="./assets/components/ngMask/dist/ngMask.min.js"></script>
     <script src="./assets/components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
     <script src="./assets/components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="./assets/components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="./assets/components/angular-ui-select/dist/select.min.js"></script>
 
     <!-- APP -->
     <script src="./js/app.js"></script>
