--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,11 +38,6 @@
     </div>
 
     <script src="./assets/components/jquery/dist/jquery.min.js"></script>
-    <script src="./assets/components/jquery-ui/jquery-ui.min.js"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-    <script>
-        $.widget.bridge('uibutton', $.ui.button);
-    </script>
     <script src="./assets/components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./assets/components/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="./assets/components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
@@ -119,6 +114,8 @@
 
     <!-- DIRECTIVES -->
     <script src="./js/directives/timeInputDirective.js"></script>
+    <script src="js/directives/timeMinDirective.js"></script>
+    <script src="js/directives/timeMaxDirective.js"></script>
 
     <!-- FILTERS -->
     <script src="./js/filters/minutesToHoursFilter.js"></script>
