menu navegacao e nome do salao

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -102,6 +102,7 @@
     <script src="js/controllers/acessoController.js"></script>
     <script src="js/controllers/menuController.js"></script>
     <script src="js/controllers/novoClienteController.js"></script>
+    <script src="js/controllers/nomeSalaoController.js"></script>
 
     <!-- INTERSEPTORS -->
     <script src="js/interceptor/jwtInterceptor.js"></script>
