--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,12 +42,14 @@
     <script src="./assets/components/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="./assets/components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
     <script src="./assets/components/moment/min/moment.min.js"></script>
+    <script src="./assets/components/moment-timezone/builds/moment-timezone-with-data.js"></script>
     <script src="./assets/components/moment-duration-format/lib/moment-duration-format.js"></script>
 
     <script>
         $(function () {
             var AdminLTEOptions = {
             };
+            //moment.tz.setDefault('America/Sao_Paulo');
         });
     </script>
     <script src="./dist/js/app.min.js"></script>
